--- a/templates/advanced.html
+++ b/templates/advanced.html
@@ -17,6 +17,8 @@
 				display: block;
 				text-align: left;
 				background: var(--background);
+				position: sticky;
+				top: 0.5em;
 			}
 
 			thead { position: sticky; top: 0; }
