Fix: Scroll to top when new post is loaded as content

--- a/templates/frameset.html
+++ b/templates/frameset.html
@@ -58,6 +58,7 @@
 
 				currenthash = hash;
 				contentframe.body.innerText = "";
+				contentframe.body.scrollTo({ top: 0, left: 0 });
 				contentframe.body.appendChild(content);
 			} catch {
 				console.error(`post "${hash}" does not exist in this context`);
